@@ -1,0 +1,17 @@
+language: perl
+perl:
+  - "5.16"
+  - "5.14"
+  - "5.12"
+  - "5.10"
+env:
+  - "HARNESS_OPTIONS=j9 TEST_POD=1"
+install:
+  - "cpanm -n Test::Pod Test::Pod::Coverage"
+  - "cpanm -n --installdeps ."
+notifications:
+  email:
+    recipients:
+      - holger.rupprecht@gmx.de
+    on_success: change
+    on_failure: always
